python-web-server/tests/http/requests/invalid/017.py
from web_server.config import MessageConfig
from web_server.http.errors import LimitRequestHeaders

cfg = MessageConfig.default()
request = LimitRequestHeaders
